# picmi

./: .flatpak-manifest.json  .kde-ci.yml  CMakeLists.txt  INSTALL  README  org.kde.picmi.appdata.xml  org.kde.picmi.desktop  picmi.appdata.xml  picmi.categories  picmi.desktop  snapcraft.yaml
cmake/: InternalMacros.cmake
doc/: index.docbook
levels/: default.xml
levels/default/: house.xpm  pirate_ship.xpm
po/ar/: picmi.po
po/ast/: picmi.po
po/bs/: picmi.po
po/ca/: picmi.po
po/ca/docs/picmi/: index.docbook
po/ca@valencia/: picmi.po
po/cs/: picmi.po
po/da/: picmi.po
po/de/: picmi.po
po/de/docs/picmi/: index.docbook
po/el/: picmi.po
po/en_GB/: picmi.po
po/eo/: picmi.po
po/es/: picmi.po
po/es/docs/picmi/: index.docbook
po/et/: picmi.po
po/et/docs/picmi/: index.docbook
po/eu/: picmi.po
po/fi/: picmi.po
po/fr/: picmi.po
po/fr/docs/picmi/: index.docbook
po/ga/: picmi.po
po/gl/: picmi.po
po/he/: picmi.po
po/hi/: picmi.po
po/hu/: picmi.po
po/ia/: picmi.po
po/it/: picmi.po
po/it/docs/picmi/: index.docbook
po/ja/: picmi.po
po/ka/: picmi.po
po/kk/: picmi.po
po/ko/: picmi.po
po/lt/: picmi.po
po/lv/: picmi.po
po/ml/: picmi.po
po/mr/: picmi.po
po/nb/: picmi.po
po/nds/: picmi.po
po/nl/: picmi.po
po/nl/docs/picmi/: index.docbook
po/nn/: picmi.po
po/pl/: picmi.po
po/pt/: picmi.po
po/pt/docs/picmi/: index.docbook
po/pt_BR/: picmi.po
po/pt_BR/docs/picmi/: index.docbook
po/ro/: picmi.po
po/ru/: picmi.po
po/sa/: picmi.po
po/sk/: picmi.po
po/sl/: picmi.po
po/sl/docs/picmi/: index.docbook
po/sr/: picmi.po
po/sr@ijekavian/: picmi.po
po/sr@ijekavianlatin/: picmi.po
po/sr@latin/: picmi.po
po/sv/: picmi.po
po/sv/docs/picmi/: index.docbook
po/tr/: picmi.po
po/ug/: picmi.po
po/uk/: picmi.po
po/uk/docs/picmi/: index.docbook
po/zh_CN/: picmi.po
po/zh_TW/: picmi.po
src/: CMakeLists.txt  config.h.in  constants.h  main.cpp  outofboundsexception.cpp  outofboundsexception.h  picmi.qrc  settings.cpp  settings.h  systemexception.cpp  systemexception.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  scene.cpp  scene.h  selectboardwindow.cpp  selectboardwindow.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  view.cpp  view.h
src/gui/graphicsitems/: cellitem.cpp  cellitem.h  highlightitem.cpp  highlightitem.h  pixmapitem.cpp  pixmapitem.h  reloadableitem.cpp  reloadableitem.h  streakitem.cpp  streakitem.h  textbanneritem.cpp  textbanneritem.h
src/logic/: CMakeLists.txt  board.cpp  board.h  boardmap.cpp  boardmap.h  boardstate.cpp  boardstate.h  elapsedtime.cpp  elapsedtime.h  levelloader.cpp  levelloader.h  picmi.cpp  picmi.h  settings.cpp  settings.h  streaks.cpp  streaks.h
test/logic/: CMakeLists.txt  streaks_test.cpp  streaks_test.h
themes/: CMakeLists.txt  picmi.desktop
